name:                DevUtils-Sys
version:             0.1.0.0
synopsis:            System defs
homepage:            https://github.com/adarqui/DevUtils-Sys
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.Sys.Memory
   System.DevUtils.Sys.Multiplex
  build-depends:       base >= 4.6, HUnit >= 1.2.5
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src
